syntax = "proto3";

package resume_screener;

option go_package = "./resume_screener";

service ResumeScreener {
  rpc ScreenResume(ScreenResumeRequest) returns (ScreenResumeResponse) {}
  rpc UploadResume(stream UploadResumeRequest) returns (UploadResumeResponse) {}
}

message UploadResumeRequest {
  oneof data {
    FileInfo info = 1;
    bytes chunk = 2;
  }
}

message FileInfo {
  string filename = 1;
  string content_type = 2;
}

message UploadResumeResponse {
  string object_name = 1;
}

message ScreenResumeRequest {
  string object_name = 1;
  string filename = 2;
  string job_description = 3;
  repeated string criteria = 4;
}

message ScreenResumeResponse {
  repeated CriteriaDecision criteria_decisions = 1;
  string overall_reasoning = 2;
  bool overall_decision = 3;
  string resume_name = 4;
}

message CriteriaDecision {
  string reasoning = 1;
  bool decision = 2;
}